--- a/index.html
+++ b/index.html
@@ -128,6 +128,47 @@
       </div>
     </div>
 
+    <!-- Clothing Display -->
+    <div class="w-100">
+      <div class="container-fluid w-75 text-center my-4 px-2">
+        <div class="row tag-bar">
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary active">All</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Coats</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Shirts</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Polos</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Dresses</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Hoodies</button>
+          </div>
+          <!-- <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Accessories</button>
+          </div> -->
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Shorts</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Trousers</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Socks</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-secondary">Shoes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
