Added and modified photos for more variety. added a see more button and will be modified later.

--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
         <div class="row product-container">
           <div class="col">
             <div class="card text-start">
-              <img src="images/prod-1.avif" class="card-img-top" alt="...">
+              <img src="images/prod-6.avif" class="card-img-top" alt="...">
               <div class="card-body ps-0">
-                <h5 class="card-title">Crew Neck Short Sleeve T-Shirt</h5>
-                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 299.99</a>
+                <h5 class="card-title">Linen Blend Open Collar Short Sleeve Shirt</h5>
+                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 990.00</a>
               </div>
             </div>
           </div>
 
           <div class="col">
             <div class="card text-start">
-              <img src="images/prod-3.avif" class="card-img-top" alt="...">
+              <img src="images/prod-5.avif" class="card-img-top" alt="...">
               <div class="card-body ps-0">
-                <h5 class="card-title">Ultra Stretch DRY-EX Jogger Pants</h5>
-                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 399.99</a>
+                <h5 class="card-title">Pleated Skirt (Abstract)</h5>
+                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 2490.00</a>
               </div>
             </div>
           </div>
@@ -224,6 +224,26 @@
 
           <div class="col">
             <div class="card text-start">
+              <img src="images/prod-8.avif" class="card-img-top" alt="...">
+              <div class="card-body ps-0">
+                <h5 class="card-title">AIRism Bra Camisole</h5>
+                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 990.00</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card text-start">
+              <img src="images/prod-7.avif" class="card-img-top" alt="...">
+              <div class="card-body ps-0">
+                <h5 class="card-title">Cotton Blend Drawstring Jacket</h5>
+                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 2989.00</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card text-start">
               <img src="images/prod-3.avif" class="card-img-top" alt="...">
               <div class="card-body ps-0">
                 <h5 class="card-title">Ultra Stretch DRY-EX Jogger Pants</h5>
@@ -231,26 +251,12 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col">
-            <div class="card text-start">
-              <img src="images/prod-2.avif" class="card-img-top" alt="...">
-              <div class="card-body ps-0">
-                <h5 class="card-title">Dry Stretch Sweat Long Sleeve Full-Zip Hoodie</h5>
-                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 1799.99</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card text-start">
-              <img src="images/prod-4.avif" class="card-img-top" alt="...">
-              <div class="card-body ps-0">
-                <h5 class="card-title">Washed Jersey Jogger Pants (Denim)</h5>
-                <a href="#" class="btn btn-link stretched-link pe-0 ps-0 fs-5 fw-bold">PHP 499.99</a>
-              </div>
-            </div>
-          </div>
+        <div class="row">
+          <button type="button" class="btn btn-outline-primary">
+            See More
+          </button>
         </div>
       </div>
     </div>
