--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
     
                     <hr>
     
-                    <small class="form-text">New to S&R? <a href="signup.html">Sign Up!</a></small>
+                    <small class="form-text">New to S&R? <a href="signup.php">Sign Up!</a></small>
                 </div>
             </div>
         </div>
